--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/quoted-printable": "^1.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
