--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/cheerio": "^0.22.35",
+    "autoprefixer": "^10.4.21",
     "cheerio": "^1.1.2",
     "dayjs": "^1.11.13",
     "firebase-admin": "^12.0.0",
