--- a/env.example
+++ b/env.example
@@ -12,6 +12,13 @@ FIREBASE_PROJECT_ID=
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_PRIVATE_KEY=
 
+# Firebase Client Configuration (for Auth)
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
+
 # Email Configuration
 RESEND_API_KEY=
 EMAIL_FROM="Deals Bot <deals@yourdomain.com>"
@@ -23,3 +30,9 @@ SITE_URL=https://yourdomain.com
 # Security
 CRON_SECRET=your-random-hex-secret-here
 NEXT_PUBLIC_CRON_SECRET=your-random-hex-secret-here
+NEXT_PUBLIC_ADMIN_PASSWORD=your-admin-password-here
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_PRICE_ID=price_...
+STRIPE_WEBHOOK_SECRET=whsec_...
