--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "oauth-simple": "node scripts/simple-oauth.js"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.9.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cheerio": "^0.22.35",
     "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
     "dayjs": "^1.11.13",
+    "firebase": "^12.2.1",
     "firebase-admin": "^12.0.0",
     "googleapis": "^144.0.0",
     "iconv-lite": "^0.7.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.11",
     "quoted-printable": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^3.2.0",
+    "stripe": "^18.5.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
