--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "^4.24.11",
     "quoted-printable": "^1.0.1",
     "react": "^18",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18",
     "resend": "^3.2.0",
     "stripe": "^18.5.0",
