--- a/env.example
+++ b/env.example
@@ -32,13 +32,22 @@ STRIPE_WEBHOOK_SECRET=whsec_ABC123... # From webhook endpoint settings
 # ===========================================
 # Get API key from https://resend.com/
 RESEND_API_KEY=re_ABC123...
-EMAIL_FROM="Flight Deals <deals@yourdomain.com>"
+EMAIL_FROM="Best LAX Deals <noreply@bestlaxdeals.com>"
+EMAIL_REPLY_TO="support@bestlaxdeals.com"  # Where replies go (optional)
 EMAIL_TO=you@yourdomain.com
 
 # ===========================================
 # SITE CONFIGURATION
 # ===========================================
 SITE_URL=https://yourdomain.com # or http://localhost:3000 for development
+
+# ===========================================
+# SEO CONFIGURATION
+# ===========================================
+# Get these from Google Search Console, Yandex Webmaster, Yahoo Site Explorer
+GOOGLE_SITE_VERIFICATION=your-google-verification-code
+YANDEX_VERIFICATION=your-yandex-verification-code
+YAHOO_VERIFICATION=your-yahoo-verification-code
 
 # ===========================================
 # SECURITY
