--- a/env.example
+++ b/env.example
@@ -32,8 +32,8 @@ STRIPE_WEBHOOK_SECRET=whsec_ABC123... # From webhook endpoint settings
 # ===========================================
 # Get API key from https://resend.com/
 RESEND_API_KEY=re_ABC123...
-EMAIL_FROM="Best LAX Deals <noreply@bestlaxdeals.com>"
-EMAIL_REPLY_TO="support@bestlaxdeals.com"  # Where replies go (optional)
+EMAIL_FROM="LAFareDrop <noreply@lafaredrop.com>"
+EMAIL_REPLY_TO="support@lafaredrop.com"  # Where replies go (optional)
 EMAIL_TO=you@yourdomain.com
 
 # ===========================================
